bitsandbytes/bnb/tests/ui/group_field_not_found.stderr
error: group field `missing` is not a field of this struct
 --> tests/ui/group_field_not_found.rs:3:22
  |
3 | #[wire(big, group(a, missing => u8))]
  |                      ^^^^^^^

warning: unused import: `u4`
 --> tests/ui/group_field_not_found.rs:1:17
  |
1 | use bnb::{wire, u4};
  |                 ^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
